docker/istio/servicegraph-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicegraph-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - servicegraph.127.0.0.1.xip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servicegraph
  namespace: istio-system
spec:
  host: servicegraph.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicegraph
  namespace: istio-system
spec:
  hosts:
  - servicegraph
  - servicegraph.127.0.0.1.xip.io
  gateways:
  - servicegraph-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: servicegraph.istio-system.svc.cluster.local
        port:
          number: 8088
